2003-05-14  Nick Drochak  <ndrochak@gol.com>

	* UTF7EncodingTest.cs: 
	* UTF8EncodingTest.cs: added from Patrick Kalkman <kalkman@cistron.nl>

2003-05-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* StringBuilderTest.cs: added replace tests from bug #41397 by
	<tom@acquist.com>>.

2003-03-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ASCIIEncodingTest.cs: added a couple of asserts fot zero-length
	arrays.

2003-02-05  Nick Drochak  <ndrochak@gol.com>

	* StringBuilderTest.cs: Test for specific exception using Nunit verson
	2 style Attribute.

2003-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* StringBuilderTest.cs: added test for passing a negative capacity to
	the constructor.

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-12-12 Jackson Harper <jackson@latitudegeo.com>

	* AllTests.cs: Comment out UTF8... test (it does not exist)

2002-03-17  Mike Kestner  <mkestner@speakeasy.net>

	* ASCIIEncodingTest.cs : New suite for ASCIIEncoding.
	* AllTests.cs : Add the new suite.

2002-02-10  Nick Drochak  <ndrochak@gol.com>

	* AllTests.cs: Remove StringBuilderTest suite.  There's a major failure
	when it's included and the test errors aren't displayed. 

2002-02-09  Nick Drochak  <ndrochak@gol.com>

	* StringBuilderTest.cs: Fixed tests that were failing against mscorlib. 