@@ -1,3 +1,8 @@
+2004-01-14  Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
+	* StringBuilderTest.cs: added tests for the couple of bugs found in the
+	new StringBuilder implementation.
+
 2003-05-14  Nick Drochak  <ndrochak@gol.com>
 
 	* UTF7EncodingTest.cs: 
